[tool.poetry]
name = "oysterpack"
version = "0.1.0"
description = ""
authors = ["oysterpack.inc <2zP6OaymGZhJTHFvQMzp6Ze>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-algorand-sdk = "^2.0.0"
python-ulid = "^1.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
