[tool.poetry]
name = "oysterpack"
version = "0.1.0"
description = ""
authors = ["oysterpack.inc <2zP6OaymGZhJTHFvQMzp6Ze>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-algorand-sdk = "^2.0.0"
python-ulid = "^1.1.0"
pyteal = "^0.22.0"
beaker-pyteal = "^0.5.1"
mypy = "^0.991"
click = "^8.1.3"
click-shell = "^2.1"
sqlalchemy = "^2.0.0"
pynacl = "^1.5.0"
reactivex = "^4.0.4"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.5"
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pylint = "^2.16.2"
alembic = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
